--- a/BodDataFirmware/platformio.ini
+++ b/BodDataFirmware/platformio.ini
@@ -17,3 +17,6 @@ monitor_speed = 115200
 lib_deps = 
 	4-20ma/ModbusMaster@^2.0.1
 	adafruit/Adafruit SSD1306@^2.5.9
+	wnatth3/WiFiManager@^2.0.16-rc.2
+	https://github.com/me-no-dev/ESPAsyncWebServer.git
+	adafruit/RTClib@^2.1.3
