--- a/BodDataFirmware/platformio.ini
+++ b/BodDataFirmware/platformio.ini
@@ -15,8 +15,9 @@ framework = arduino
 monitor_port = COM3
 monitor_speed = 115200
 lib_deps = 
-	4-20ma/ModbusMaster@^2.0.1
-	adafruit/Adafruit SSD1306@^2.5.9
-	wnatth3/WiFiManager@^2.0.16-rc.2
+	4-20ma/ModbusMaster@2.0.1
+	adafruit/Adafruit SSD1306@2.5.9
+	wnatth3/WiFiManager@2.0.16-rc.2
 	https://github.com/me-no-dev/ESPAsyncWebServer.git
-	adafruit/RTClib@^2.1.3
+	adafruit/RTClib@2.1.3
+	arduino-libraries/NTPClient@3.2.1
